--- a/src/views/layout/default.njk
+++ b/src/views/layout/default.njk
@@ -13,5 +13,6 @@
       this  is default container
     </div>
     {% endblock %}
+    <script src="{{ script['/static/index.js'] }}" charset="utf-8"></script>
   </body>
 </html>
